--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-<!-- 页眉 -->
-<div>
-	<p>wind_2067的网址</p>
-</div>
+<!DOCTYPE html>
+<html>
+	<head>
+		<!-- CSS -->
+		<link rel="stylesheet" type="text/css" href="共用.css">
+	</head>
+	<body>
+		<!-- 页眉 -->
+		<div class = "wide_header">
+			<p>wind_2067的网址</p>
+		</div>
+	</body>
+</html>
+
+
+
