--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<!-- CSS -->
-		<link rel="stylesheet" type="text/css" href="共用.css">
+		<link rel="stylesheet" type="text/css" href="public.css">
 	</head>
 	<body>
 		<!-- 页眉 -->
