--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	</head>
 	<body>
 		<!-- 页眉 -->
-		<div class = "wide_header">
-			<p>wind_2067的网址</p>
-			<p>首页</p>	<!-- 房子 -->
-			<p>日志</p>	<!-- 笔 + 纸 -->
-			<p>关注</p>	<!-- 链子 -->
-			<p>收藏</p>	<!-- 星星 -->
+		<div class = "header", height = 50px>
+			<div class = "caption"><p>wind_2067的网址</p></div>
+			<div class = "selection"><p>首页</p></div>	<!-- 房子 -->
+			<div class = "selection"><p>日志</p></div>	<!-- 笔 + 纸 -->
+			<div class = "selection"><p>关注</p></div>	<!-- 链子 -->
+			<div class = "selection"><p>收藏</p></div>	<!-- 星星 -->
 		</div>
 	</body>
 </html>
